fixed footer spacing

--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,6 @@ h3 {
     height: 5rem;
     width: 96%;
     margin: 0 auto;
-    margin-top: -5rem;
     padding: .5rem 0;
     z-index: 10;
     display: flex;
@@ -255,7 +254,6 @@ h3 {
 }
 
 #portfolio-cont {
-    height: calc(100% - 5rem);
     overflow: scroll;
     padding: 0 1em;
     grid-row: 1 / 11;
